# RetroForth 2021.10 (In Progress) Release Notes

# Core Language

- new words

  h:fetch h:store w:fetch w:store
  s:fetch s:store

- dictionary

  added d:source field

# VM

## nga-c: retro.c

- added optional support for multiple virtual processor cores
- added optional ffi
- work on internal cleanups
- better error messages when socket device not present

# Documentation

- Updated Build instructions for Linux (re: FFI support & libdl)
- Updated the description & example for `a:to-string`
- d:source field now populated for all standard words