@@ -10,8 +10,8 @@
 #define CELL_MAX LLONG_MAX - 1
 #endif
 #endif
-CELL ngaImageCells = 16644;
-CELL ngaImage[] = { 1793,16305,16600,16643,202110,405,377,1150,1535,0,10,1,10,2,10,3,10,4,10,
+CELL ngaImageCells = 16714;
+CELL ngaImage[] = { 1793,16375,16670,16713,202110,405,377,1150,1535,0,10,1,10,2,10,3,10,4,10,
                        5,10,6,10,7,10,8,10,11,10,12,10,13,10,14,10,15,10,16,10,
                        17,10,18,10,19,10,20,10,21,10,22,10,23,10,24,10,25,68223234,1,2575,
                        85000450,1,656912,161,178,268505089,63,62,285281281,0,63,2063,10,101384453,0,9,10,68485378,255,18350338,
@@ -20,8 +20,8 @@ CELL ngaImage[] = { 1793,16305,16600,16643,202110,405,377,1150,1535,0,10,1,10,2,
                        101777669,1,17565186,107,524545,111,64,167838467,-1,134287105,3,59,659457,3,459023,128,2049,56,25,2049,
                        128,1793,135,2049,135,117506307,0,128,0,524545,26,133,168820993,0,147,1642241,147,134283523,11,133,
                        1793,128,524545,2049,128,1793,128,16846593,147,161,178,1793,64,16846593,147,133,178,1793,64,7,
-                       10,659713,1,659713,2,659713,3,659713,4,1793,16353,17108737,3,2,524559,128,2049,128,2049,128,
-                       524545,0,128,2049,142,168820998,2,15568,1150,167841793,206,9,17826049,0,206,2,15,25,524546,186,
+                       10,659713,1,659713,2,659713,3,659713,4,1793,16423,17108737,3,2,524559,128,2049,128,2049,128,
+                       524545,0,128,2049,142,168820998,2,15638,1150,167841793,206,9,17826049,0,206,2,15,25,524546,186,
                        134287105,207,116,2305,208,459023,216,134287361,207,211,659201,206,10,659969,7,2049,56,25,17694978,58,
                        232,9,84152833,48,319750404,231,117507601,234,184618754,45,25,16974851,-1,168886532,1,134284289,1,247,134284289,0,
                        234,660227,32,0,0,115,105,103,105,108,58,105,0,285278479,264,6,2576,524546,102,1641217,
@@ -171,7 +171,7 @@ CELL ngaImage[] = { 1793,16305,16600,16643,202110,405,377,1150,1535,0,10,1,10,2,
                        0,659713,1,10,3130,3153,166,14919,110,58,100,101,99,0,659969,1,10,3143,3171,166,
                        14919,110,58,98,101,116,119,101,101,110,63,0,67503109,1793,3179,67503109,67503109,2049,3122,10,
                        1,3174,2049,2203,11,10,3156,3199,166,14919,83,99,111,112,101,76,105,115,116,0,
-                       16454,16532,10,3185,3209,166,14919,123,123,0,2049,1573,2,1,3199,2049,59,16,10,3202,
+                       16524,16602,10,3185,3209,166,14919,123,123,0,2049,1573,2,1,3199,2049,59,16,10,3202,
                        3235,166,14919,45,45,45,114,101,118,101,97,108,45,45,45,0,2049,1573,1,3199,
                        2049,3140,16,10,3218,3250,166,14919,125,125,0,1,3199,2049,56,4,15,11,1793,3264,
                        3841,3199,4097,2,10,1,3259,1793,3290,3841,3199,1793,3285,1,2,983567,1,3199,2049,3140,
@@ -768,79 +768,82 @@ CELL ngaImage[] = { 1793,16305,16600,16643,202110,405,377,1150,1535,0,10,1,10,2,
                        14943,10,15058,15100,166,15105,99,111,114,101,58,119,114,105,116,101,47,114,101,103,
                        0,1,6,2049,14943,10,105,110,116,101,114,102,97,99,101,47,109,117,108,116,
                        105,99,111,114,101,46,114,101,116,114,111,0,15081,15146,166,0,117,110,115,105,
-                       103,110,101,100,58,43,0,1,8101,2049,10112,2049,10094,17,10,15131,15169,166,0,117,
-                       110,115,105,103,110,101,100,58,45,0,1,8101,2049,10112,2049,10094,18,10,15154,15192,
-                       166,0,117,110,115,105,103,110,101,100,58,42,0,1,8101,2049,10112,2049,10094,19,
-                       10,15177,15218,166,0,117,110,115,105,103,110,101,100,58,47,109,111,100,0,1,
-                       8101,2049,10112,2049,10094,20,10,15200,15243,166,0,117,110,115,105,103,110,101,100,58,
-                       101,113,63,0,1,8101,2049,10112,2049,10094,11,10,15226,15269,166,0,117,110,115,105,
-                       103,110,101,100,58,45,101,113,63,0,1,8101,2049,10112,2049,10094,12,10,15251,15294,
-                       166,0,117,110,115,105,103,110,101,100,58,108,116,63,0,1,8101,2049,10112,2049,
-                       10094,13,10,15277,15319,166,0,117,110,115,105,103,110,101,100,58,103,116,63,0,
-                       1,8101,2049,10112,2049,10094,14,10,15302,15346,166,0,117,110,115,105,103,110,101,100,
-                       58,115,104,105,102,116,0,1,8101,2049,10112,2049,10094,24,10,15327,15366,166,0,115,
-                       58,115,112,108,105,116,0,2049,6884,10,15354,15391,166,0,115,58,115,112,108,105,
-                       116,45,111,110,45,115,116,114,105,110,103,0,2049,6917,10,15369,15415,166,0,115,
-                       58,99,111,110,116,97,105,110,115,45,99,104,97,114,63,0,2049,4645,10,15394,
-                       15441,166,0,115,58,99,111,110,116,97,105,110,115,45,115,116,114,105,110,103,
-                       63,0,2049,4849,10,15418,15467,166,0,97,58,99,111,110,116,97,105,110,115,45,
-                       115,116,114,105,110,103,63,0,2049,8862,10,15444,15485,166,0,97,58,105,110,100,
-                       101,120,45,111,102,0,2049,9097,10,15470,15510,166,0,97,58,105,110,100,101,120,
-                       45,111,102,45,115,116,114,105,110,103,0,2049,9134,10,15488,15528,166,0,115,58,
-                       105,110,100,101,120,45,111,102,0,2049,4578,10,15513,15553,166,0,115,58,105,110,
-                       100,101,120,45,111,102,45,115,116,114,105,110,103,0,2049,5066,10,15531,15564,166,
-                       16324,84,73,66,0,1,7,15,10,15556,15583,166,16324,105,109,97,103,101,58,115,
-                       97,118,101,0,1,1000,2049,10112,2049,10094,10,15568,15600,166,0,101,100,105,116,63,
-                       0,2,1793,15607,1,8,11,10,1,15603,1793,15615,1,127,11,10,1,15611,2049,2216,
-                       22,10,15590,15632,166,0,103,97,116,104,101,114,0,2049,15600,1,15,1,3957,2049,
-                       64,10,15621,15651,166,0,99,121,99,108,101,0,2049,10428,2049,2181,4,8,2049,2684,
-                       25,3,2049,15632,1,15651,7,10,15568,15683,166,16324,112,97,114,115,101,45,117,110,
-                       116,105,108,0,1793,15695,2049,4261,2049,4053,2049,15651,771,2049,3921,10,1,15685,2049,4078,
-                       10,15667,15710,166,16324,115,58,103,101,116,0,1793,15732,1793,15718,1,13,11,10,1,
-                       15714,1793,15726,1,10,11,10,1,15722,2049,2216,22,10,1,15712,2049,15683,10,15700,15747,
-                       166,16324,99,108,101,97,114,0,2049,4281,92,94,91,50,74,92,94,91,48,59,
-                       48,72,0,1,15749,2049,8127,2049,10213,10,15737,15780,154,16324,78,111,69,99,104,111,
-                       0,0,15769,15789,154,0,69,79,84,0,0,15781,15803,154,0,73,103,110,111,114,
-                       105,110,103,0,0,15790,15818,166,0,105,103,110,111,114,105,110,103,63,0,3841,
-                       15803,10,15804,15833,166,0,118,101,114,115,105,111,110,0,3841,4,1,100,20,10,
-                       15821,15849,166,0,100,111,110,101,63,0,2,4097,15789,1793,15858,1,13,11,10,1,
-                       15854,1793,15866,1,10,11,10,1,15862,1793,15874,1,32,11,10,1,15870,2049,2256,22,
-                       22,10,15839,15890,166,0,101,111,108,63,0,3841,15789,1793,15898,1,13,11,10,1,
-                       15894,1793,15906,1,10,11,10,1,15902,2049,2216,22,10,15881,15923,166,0,118,97,108,
-                       105,100,63,0,2,2049,102,2049,2843,10,15912,15943,166,0,99,104,101,99,107,45,
-                       101,111,102,0,2,1793,15950,1,-1,11,10,1,15946,1793,15958,1,4,11,10,1,
-                       15954,2049,2216,22,1793,15968,2049,10493,10,1,15965,9,10,15929,15979,166,0,98,115,0,
-                       2049,4032,1,2,2049,2713,1793,15991,2049,3982,3,10,1,15987,9,2049,3982,3,10,15972,
-                       16011,166,0,99,104,101,99,107,45,98,115,0,2,1793,16018,1,8,11,10,1,
-                       16014,1793,16026,1,127,11,10,1,16022,2049,2216,22,1793,16036,2049,15979,10,1,16033,9,
-                       10,15998,16050,166,0,99,104,101,99,107,0,2049,15943,2049,16011,10,16040,16069,166,0,
-                       99,104,97,114,97,99,116,101,114,0,2049,10428,2,2049,3957,10,16055,16086,166,0,
-                       98,117,102,102,101,114,0,1793,16096,2049,15564,2049,4053,8,2049,3921,10,1,16088,2049,
-                       4078,10,16075,16116,166,0,114,101,97,100,45,116,111,107,101,110,0,1793,16132,1793,
-                       16127,2049,16069,2049,16050,2049,15849,10,1,16120,2049,2445,10,1,16118,2049,16086,2049,4391,10,
-                       16101,16149,166,0,105,110,112,117,116,0,2049,16116,2049,15923,10,16139,16166,166,0,112,
-                       114,111,99,101,115,115,0,2049,15818,1793,16184,771,2049,15890,1793,16180,1,15803,2049,3764,
-                       10,1,16175,9,10,1,16170,2049,2890,1,405,1,15,2049,64,10,15769,16202,178,16324,
-                       47,47,0,2049,14828,1,15803,2049,3750,10,16195,16220,166,16324,98,97,110,110,101,114,
-                       0,2049,15833,2049,4281,82,69,84,82,79,32,49,50,32,40,37,110,46,37,110,
-                       41,92,110,0,1,16224,2049,8127,2049,10213,2049,10285,2049,1544,2049,10285,18,2049,1544,2049,
-                       4281,37,110,32,77,97,120,44,32,37,110,32,85,115,101,100,44,32,37,110,
-                       32,70,114,101,101,92,110,0,1,16260,2049,8127,2049,10213,10,16209,16305,166,16324,108,
-                       105,115,116,101,110,0,3841,15780,1793,16312,2049,16220,10,1,16309,2049,72,2049,16149,2049,
-                       16166,1,16316,7,10,105,110,116,101,114,102,97,99,101,47,114,101,116,114,111,
-                       45,117,110,105,120,46,114,101,116,114,111,0,1793,16376,2049,14765,2049,4308,1793,16366,
-                       1,188,1,2,17,8,10,1,16359,2049,2192,2049,1573,2049,184,16,10,1,16353,100,
-                       105,99,116,45,119,111,114,100,115,45,108,105,115,116,105,110,103,46,102,111,
-                       114,116,104,0,16294,16415,166,16378,100,58,119,111,114,100,115,0,1793,16424,2049,186,
-                       2049,10213,2049,10185,10,1,16417,2049,8364,10,100,105,99,116,45,119,111,114,100,115,
-                       45,108,105,115,116,105,110,103,46,102,111,114,116,104,0,16403,16471,166,16429,100,
-                       58,119,111,114,100,115,45,119,105,116,104,0,2049,1953,2049,5346,1793,16502,2049,186,
-                       2,2049,1953,2049,4849,1793,16491,2049,10213,2049,10185,10,1,16486,1793,16497,3,10,1,16495,
-                       2049,64,10,1,16477,2049,8364,10,100,105,99,116,45,119,111,114,100,115,45,108,
-                       105,115,116,105,110,103,46,102,111,114,116,104,0,16454,16552,166,16507,100,105,115,
-                       112,108,97,121,45,105,102,45,108,101,102,116,0,2,2049,1953,2049,5294,1793,16564,
-                       2049,10213,2049,10185,10,1,16559,1793,16570,3,10,1,16568,2049,64,10,100,105,99,116,
-                       45,119,111,114,100,115,45,108,105,115,116,105,110,103,46,102,111,114,116,104,
-                       0,16454,16627,166,16575,100,58,119,111,114,100,115,45,98,101,103,105,110,110,105,
-                       110,103,45,119,105,116,104,0,2049,1953,2049,5346,1793,16638,2049,186,2049,16552,10,1,
-                       16633,2049,8364,10,0 };
+                       103,110,101,100,58,43,0,1,0,1,8101,2049,10112,2049,10094,17,10,15131,15171,166,
+                       0,117,110,115,105,103,110,101,100,58,45,0,1,0,1,8101,2049,10112,2049,10094,
+                       18,10,15156,15196,166,0,117,110,115,105,103,110,101,100,58,42,0,1,0,1,
+                       8101,2049,10112,2049,10094,19,10,15181,15224,166,0,117,110,115,105,103,110,101,100,58,
+                       47,109,111,100,0,1,0,1,8101,2049,10112,2049,10094,20,10,15206,15251,166,0,117,
+                       110,115,105,103,110,101,100,58,101,113,63,0,1,0,1,8101,2049,10112,2049,10094,
+                       11,10,15234,15279,166,0,117,110,115,105,103,110,101,100,58,45,101,113,63,0,
+                       1,0,1,8101,2049,10112,2049,10094,12,10,15261,15306,166,0,117,110,115,105,103,110,
+                       101,100,58,108,116,63,0,1,0,1,8101,2049,10112,2049,10094,13,10,15289,15333,166,
+                       0,117,110,115,105,103,110,101,100,58,103,116,63,0,1,0,1,8101,2049,10112,
+                       2049,10094,14,10,15316,15362,166,0,117,110,115,105,103,110,101,100,58,115,104,105,
+                       102,116,0,1,0,1,8101,2049,10112,2049,10094,24,10,15343,15391,166,0,117,110,115,
+                       105,103,110,101,100,58,42,47,109,111,100,0,1,1,1,0,1,8101,2049,10112,
+                       2,2049,10094,2049,10094,10,15372,15415,166,0,42,47,109,111,100,0,1,1,1,8101,
+                       2049,10112,2049,10094,10,15405,15436,166,0,115,58,115,112,108,105,116,0,2049,6884,10,
+                       15424,15461,166,0,115,58,115,112,108,105,116,45,111,110,45,115,116,114,105,110,
+                       103,0,2049,6917,10,15439,15485,166,0,115,58,99,111,110,116,97,105,110,115,45,
+                       99,104,97,114,63,0,2049,4645,10,15464,15511,166,0,115,58,99,111,110,116,97,
+                       105,110,115,45,115,116,114,105,110,103,63,0,2049,4849,10,15488,15537,166,0,97,
+                       58,99,111,110,116,97,105,110,115,45,115,116,114,105,110,103,63,0,2049,8862,
+                       10,15514,15555,166,0,97,58,105,110,100,101,120,45,111,102,0,2049,9097,10,15540,
+                       15580,166,0,97,58,105,110,100,101,120,45,111,102,45,115,116,114,105,110,103,
+                       0,2049,9134,10,15558,15598,166,0,115,58,105,110,100,101,120,45,111,102,0,2049,
+                       4578,10,15583,15623,166,0,115,58,105,110,100,101,120,45,111,102,45,115,116,114,
+                       105,110,103,0,2049,5066,10,15601,15634,166,16394,84,73,66,0,1,7,15,10,15626,
+                       15653,166,16394,105,109,97,103,101,58,115,97,118,101,0,1,1000,2049,10112,2049,10094,
+                       10,15638,15670,166,0,101,100,105,116,63,0,2,1793,15677,1,8,11,10,1,15673,
+                       1793,15685,1,127,11,10,1,15681,2049,2216,22,10,15660,15702,166,0,103,97,116,104,
+                       101,114,0,2049,15670,1,15,1,3957,2049,64,10,15691,15721,166,0,99,121,99,108,
+                       101,0,2049,10428,2049,2181,4,8,2049,2684,25,3,2049,15702,1,15721,7,10,15638,15753,
+                       166,16394,112,97,114,115,101,45,117,110,116,105,108,0,1793,15765,2049,4261,2049,4053,
+                       2049,15721,771,2049,3921,10,1,15755,2049,4078,10,15737,15780,166,16394,115,58,103,101,116,
+                       0,1793,15802,1793,15788,1,13,11,10,1,15784,1793,15796,1,10,11,10,1,15792,2049,
+                       2216,22,10,1,15782,2049,15753,10,15770,15817,166,16394,99,108,101,97,114,0,2049,4281,
+                       92,94,91,50,74,92,94,91,48,59,48,72,0,1,15819,2049,8127,2049,10213,10,
+                       15807,15850,154,16394,78,111,69,99,104,111,0,0,15839,15859,154,0,69,79,84,0,
+                       0,15851,15873,154,0,73,103,110,111,114,105,110,103,0,0,15860,15888,166,0,105,
+                       103,110,111,114,105,110,103,63,0,3841,15873,10,15874,15903,166,0,118,101,114,115,
+                       105,111,110,0,3841,4,1,100,20,10,15891,15919,166,0,100,111,110,101,63,0,
+                       2,4097,15859,1793,15928,1,13,11,10,1,15924,1793,15936,1,10,11,10,1,15932,1793,
+                       15944,1,32,11,10,1,15940,2049,2256,22,22,10,15909,15960,166,0,101,111,108,63,
+                       0,3841,15859,1793,15968,1,13,11,10,1,15964,1793,15976,1,10,11,10,1,15972,2049,
+                       2216,22,10,15951,15993,166,0,118,97,108,105,100,63,0,2,2049,102,2049,2843,10,
+                       15982,16013,166,0,99,104,101,99,107,45,101,111,102,0,2,1793,16020,1,-1,11,
+                       10,1,16016,1793,16028,1,4,11,10,1,16024,2049,2216,22,1793,16038,2049,10493,10,1,
+                       16035,9,10,15999,16049,166,0,98,115,0,2049,4032,1,2,2049,2713,1793,16061,2049,3982,
+                       3,10,1,16057,9,2049,3982,3,10,16042,16081,166,0,99,104,101,99,107,45,98,
+                       115,0,2,1793,16088,1,8,11,10,1,16084,1793,16096,1,127,11,10,1,16092,2049,
+                       2216,22,1793,16106,2049,16049,10,1,16103,9,10,16068,16120,166,0,99,104,101,99,107,
+                       0,2049,16013,2049,16081,10,16110,16139,166,0,99,104,97,114,97,99,116,101,114,0,
+                       2049,10428,2,2049,3957,10,16125,16156,166,0,98,117,102,102,101,114,0,1793,16166,2049,
+                       15634,2049,4053,8,2049,3921,10,1,16158,2049,4078,10,16145,16186,166,0,114,101,97,100,
+                       45,116,111,107,101,110,0,1793,16202,1793,16197,2049,16139,2049,16120,2049,15919,10,1,16190,
+                       2049,2445,10,1,16188,2049,16156,2049,4391,10,16171,16219,166,0,105,110,112,117,116,0,
+                       2049,16186,2049,15993,10,16209,16236,166,0,112,114,111,99,101,115,115,0,2049,15888,1793,
+                       16254,771,2049,15960,1793,16250,1,15873,2049,3764,10,1,16245,9,10,1,16240,2049,2890,1,
+                       405,1,15,2049,64,10,15839,16272,178,16394,47,47,0,2049,14828,1,15873,2049,3750,10,
+                       16265,16290,166,16394,98,97,110,110,101,114,0,2049,15903,2049,4281,82,69,84,82,79,
+                       32,49,50,32,40,37,110,46,37,110,41,92,110,0,1,16294,2049,8127,2049,10213,
+                       2049,10285,2049,1544,2049,10285,18,2049,1544,2049,4281,37,110,32,77,97,120,44,32,37,
+                       110,32,85,115,101,100,44,32,37,110,32,70,114,101,101,92,110,0,1,16330,
+                       2049,8127,2049,10213,10,16279,16375,166,16394,108,105,115,116,101,110,0,3841,15850,1793,16382,
+                       2049,16290,10,1,16379,2049,72,2049,16219,2049,16236,1,16386,7,10,105,110,116,101,114,
+                       102,97,99,101,47,114,101,116,114,111,45,117,110,105,120,46,114,101,116,114,
+                       111,0,1793,16446,2049,14765,2049,4308,1793,16436,1,188,1,2,17,8,10,1,16429,2049,
+                       2192,2049,1573,2049,184,16,10,1,16423,100,105,99,116,45,119,111,114,100,115,45,
+                       108,105,115,116,105,110,103,46,102,111,114,116,104,0,16364,16485,166,16448,100,58,
+                       119,111,114,100,115,0,1793,16494,2049,186,2049,10213,2049,10185,10,1,16487,2049,8364,10,
+                       100,105,99,116,45,119,111,114,100,115,45,108,105,115,116,105,110,103,46,102,
+                       111,114,116,104,0,16473,16541,166,16499,100,58,119,111,114,100,115,45,119,105,116,
+                       104,0,2049,1953,2049,5346,1793,16572,2049,186,2,2049,1953,2049,4849,1793,16561,2049,10213,2049,
+                       10185,10,1,16556,1793,16567,3,10,1,16565,2049,64,10,1,16547,2049,8364,10,100,105,
+                       99,116,45,119,111,114,100,115,45,108,105,115,116,105,110,103,46,102,111,114,
+                       116,104,0,16524,16622,166,16577,100,105,115,112,108,97,121,45,105,102,45,108,101,
+                       102,116,0,2,2049,1953,2049,5294,1793,16634,2049,10213,2049,10185,10,1,16629,1793,16640,3,
+                       10,1,16638,2049,64,10,100,105,99,116,45,119,111,114,100,115,45,108,105,115,
+                       116,105,110,103,46,102,111,114,116,104,0,16524,16697,166,16645,100,58,119,111,114,
+                       100,115,45,98,101,103,105,110,110,105,110,103,45,119,105,116,104,0,2049,1953,
+                       2049,5346,1793,16708,2049,186,2049,16622,10,1,16703,2049,8364,10,0 };
